--- a/PasswordManager/App.config
+++ b/PasswordManager/App.config
@@ -7,14 +7,17 @@
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
   </startup>
-  <connectionStrings>
-    <add name="SqlAzure" providerName="System.Data.ProviderName" connectionString="Server=tcp:maindiplom.database.windows.net,1433;      Initial Catalog=MainDB;      Persist Security Info=False;      User ID=admin1;      Password={!password1};      MultipleActiveResultSets=False;      Encrypt=True;      TrustServerCertificate=False;      Connection Timeout=30;" />
-  </connectionStrings>
+
   <entityFramework>
     <providers>
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-
+  
+  <connectionStrings>
+    <add name="DBConnection"
+     providerName="System.Data.ProviderName"
+     connectionString="Server=tcp:maindiplom.database.windows.net,1433;Initial Catalog=MainDB;Persist Security Info=False;User ID=admin1;Password=!password1;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" />
+  </connectionStrings>
   
 </configuration>
