Add common config file

--- a/PasswordManager/App.config
+++ b/PasswordManager/App.config
@@ -13,11 +13,7 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-  
-  <connectionStrings>
-    <add name="DBConnection"
-     providerName="System.Data.ProviderName"
-     connectionString="Server=tcp:maindiplom.database.windows.net,1433;Initial Catalog=MainDB;Persist Security Info=False;User ID=admin1;Password=!password1;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" />
-  </connectionStrings>
+
+  <connectionStrings configSource="ConnectionStrings.config" />
   
 </configuration>
