Registration form added

--- a/PasswordManagerMainWindow/PasswordManagerMainWindow.csproj
+++ b/PasswordManagerMainWindow/PasswordManagerMainWindow.csproj
@@ -97,5 +97,11 @@
   <ItemGroup>
     <Content Include="..\ConnectionStrings.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\UsersLibrary\UsersLibrary.csproj">
+      <Project>{1283c04d-3957-4e0f-a625-bc253090a7e7}</Project>
+      <Name>UsersLibrary</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
