Add theme picker

--- a/PasswordManagerMainWindow/PasswordManagerAuthenticationWindow.csproj
+++ b/PasswordManagerMainWindow/PasswordManagerAuthenticationWindow.csproj
@@ -56,24 +56,23 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Compile Include="Services\ThemePicker.cs" />
-    <Page Include="Auth\Auth.xaml">
+    <Page Include="Auth.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Auth\AuthStyles.xaml">
+    <Page Include="AuthStyles.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Auth\EmailConfirmation.xaml">
+    <Page Include="EmailConfirmation.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
-    <Page Include="Auth\Login.xaml">
+    <Page Include="Login.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Auth\PasswordReset.xaml">
+    <Page Include="PasswordReset.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -81,19 +80,19 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="Auth\Auth.xaml.cs">
+    <Compile Include="Auth.xaml.cs">
       <DependentUpon>Auth.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Auth\EmailConfirmation.xaml.cs">
+    <Compile Include="EmailConfirmation.xaml.cs">
       <DependentUpon>EmailConfirmation.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Auth\Login.xaml.cs">
+    <Compile Include="Login.xaml.cs">
       <DependentUpon>Login.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Auth\PasswordReset.xaml.cs">
+    <Compile Include="PasswordReset.xaml.cs">
       <DependentUpon>PasswordReset.xaml</DependentUpon>
     </Compile>
-    <Page Include="Auth\Signup.xaml">
+    <Page Include="Signup.xaml">
       <SubType>Designer</SubType>
       <Generator>XamlIntelliSenseFileGenerator</Generator>
     </Page>
@@ -107,7 +106,7 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Auth\Signup.xaml.cs">
+    <Compile Include="Signup.xaml.cs">
       <DependentUpon>Signup.xaml</DependentUpon>
     </Compile>
     <Compile Include="Components\BindablePasswordBox.xaml.cs">
@@ -142,7 +141,7 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\PasswordManagerWindow\PasswordManagerWindow.csproj">
-      <Project>{bb374751-f0bf-48e2-bcbc-b3db023535b6}</Project>
+      <Project>{849091e3-5fc9-42e7-b30a-53991c51fc19}</Project>
       <Name>PasswordManagerWindow</Name>
     </ProjectReference>
     <ProjectReference Include="..\UsersLibrary\UsersLibrary.csproj">
@@ -151,11 +150,8 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Auth\Assets\closed_eye.png" />
-    <Resource Include="Auth\Assets\eye.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <Resource Include="Assets\Relay.jpg" />
+    <Resource Include="Assets\closed_eye.png" />
+    <Resource Include="Assets\eye.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
