--- a/PasswordManagerMainWindow/PasswordManagerMainWindow.csproj
+++ b/PasswordManagerMainWindow/PasswordManagerMainWindow.csproj
@@ -65,7 +65,6 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Compile Include="Services\ThemePicker.cs" />
     <Page Include="Auth\Auth.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -166,6 +165,10 @@
     <ProjectReference Include="..\PasswordManagerWindow\PasswordManagerWindow.csproj">
       <Project>{bb374751-f0bf-48e2-bcbc-b3db023535b6}</Project>
       <Name>PasswordManagerWindow</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Services\Services.csproj">
+      <Project>{197BFFCB-A95B-4DA8-A4AF-9905997D6039}</Project>
+      <Name>Services</Name>
     </ProjectReference>
     <ProjectReference Include="..\UsersLibrary\UsersLibrary.csproj">
       <Project>{1283c04d-3957-4e0f-a625-bc253090a7e7}</Project>
