--- a/UsersLibrary/UsersLibrary.csproj
+++ b/UsersLibrary/UsersLibrary.csproj
@@ -58,5 +58,11 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Services\Services.csproj">
+      <Project>{197BFFCB-A95B-4DA8-A4AF-9905997D6039}</Project>
+      <Name>Services</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
