--- a/PasswordManagerMainWindow/PasswordManagerMainWindow.csproj
+++ b/PasswordManagerMainWindow/PasswordManagerMainWindow.csproj
@@ -113,6 +113,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="Styles\ResetPasswordStyles.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Styles\SignUpPageStyles.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
