Add main EmailService functional

--- a/PasswordManagerMainWindow/PasswordManagerMainWindow.csproj
+++ b/PasswordManagerMainWindow/PasswordManagerMainWindow.csproj
@@ -186,5 +186,8 @@
     <Resource Include="Auth\Assets\closed_eye_white.png" />
     <Resource Include="Auth\Assets\eye_white.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Auth\Assets\EmailConfirmationMessage.txt" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
