--- a/PasswordManagerWindow/PasswordManagerWindow.csproj
+++ b/PasswordManagerWindow/PasswordManagerWindow.csproj
@@ -153,6 +153,8 @@
       <Name>UsersLibrary</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Controls\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
