home page completely designed and functioning

--- a/PasswordManagerWindow/PasswordManagerWindow.csproj
+++ b/PasswordManagerWindow/PasswordManagerWindow.csproj
@@ -153,8 +153,6 @@
       <Name>UsersLibrary</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Controls\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
