Connect two projects

--- a/PasswordManagerMainWindow/PasswordManagerApp.csproj
+++ b/PasswordManagerMainWindow/PasswordManagerApp.csproj
@@ -65,19 +65,19 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Page Include="Auth\Auth.xaml">
+    <Page Include="AuthenticationWindow\Auth\Auth.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Auth\EmailConfirmation.xaml">
+    <Page Include="AuthenticationWindow\Auth\EmailConfirmation.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Auth\Login.xaml">
+    <Page Include="AuthenticationWindow\Auth\Login.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Auth\PasswordReset.xaml">
+    <Page Include="AuthenticationWindow\Auth\PasswordReset.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -85,25 +85,41 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="Auth\Auth.xaml.cs">
+    <Compile Include="AuthenticationWindow\Auth\Auth.xaml.cs">
       <DependentUpon>Auth.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Auth\EmailConfirmation.xaml.cs">
+    <Compile Include="AuthenticationWindow\Auth\EmailConfirmation.xaml.cs">
       <DependentUpon>EmailConfirmation.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Auth\Login.xaml.cs">
+    <Compile Include="AuthenticationWindow\Auth\Login.xaml.cs">
       <DependentUpon>Login.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Auth\PasswordReset.xaml.cs">
+    <Compile Include="AuthenticationWindow\Auth\PasswordReset.xaml.cs">
       <DependentUpon>PasswordReset.xaml</DependentUpon>
     </Compile>
-    <Page Include="Auth\Signup.xaml">
+    <Page Include="AuthenticationWindow\Auth\Signup.xaml">
       <SubType>Designer</SubType>
       <Generator>XamlIntelliSenseFileGenerator</Generator>
     </Page>
-    <Page Include="Components\BindablePasswordBox.xaml">
+    <Page Include="AuthenticationWindow\Components\BindablePasswordBox.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="MainWindow\MainWindow.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="MainWindow\Pages\Account.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="MainWindow\Pages\Home.xaml">
+      <SubType>Designer</SubType>
+      <Generator>XamlIntelliSenseFileGenerator</Generator>
+    </Page>
+    <Page Include="MainWindow\Pages\Settings.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
     </Page>
     <Page Include="Styles\LoginPageStyles.xaml">
       <SubType>Designer</SubType>
@@ -113,6 +129,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="Styles\MainStyles.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
     <Page Include="Styles\ResetPasswordStyles.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -121,22 +141,45 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Themes\DarkTheme.xaml">
+    <Page Include="Themes\AuthenticationWindowThemes\DarkTheme.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Themes\LightTheme.xaml">
+    <Page Include="Themes\AuthenticationWindowThemes\LightTheme.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Themes\MainWindowThemes\DarkTheme.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Themes\MainWindowThemes\LightTheme.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
     </Page>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Auth\Signup.xaml.cs">
+    <Compile Include="AuthenticationWindow\Auth\Signup.xaml.cs">
       <DependentUpon>Signup.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Components\BindablePasswordBox.xaml.cs">
+    <Compile Include="AuthenticationWindow\Components\BindablePasswordBox.xaml.cs">
       <DependentUpon>BindablePasswordBox.xaml</DependentUpon>
     </Compile>
+    <Compile Include="MainWindow\MainWindow.xaml.cs">
+      <DependentUpon>MainWindow.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="MainWindow\Models\AuthenticationData.cs" />
+    <Compile Include="MainWindow\Models\BaseModel.cs" />
+    <Compile Include="MainWindow\Pages\Account.xaml.cs">
+      <DependentUpon>Account.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="MainWindow\Pages\Home.xaml.cs">
+      <DependentUpon>Home.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="MainWindow\Pages\Settings.xaml.cs">
+      <DependentUpon>Settings.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="MainWindow\ViewModels\AuthenticationDataVM.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -180,18 +223,16 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Auth\Assets\closed_eye.png" />
-    <Resource Include="Auth\Assets\eye.png" />
+    <Resource Include="AuthenticationWindow\Auth\Assets\closed_eye.png" />
+    <Resource Include="AuthenticationWindow\Auth\Assets\eye.png" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Assets\Relay.jpg" />
+    <Resource Include="AuthenticationWindow\Auth\Assets\closed_eye_white.png" />
+    <Resource Include="AuthenticationWindow\Auth\Assets\eye_white.png" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Auth\Assets\closed_eye_white.png" />
-    <Resource Include="Auth\Assets\eye_white.png" />
+    <Resource Include="AuthenticationWindow\Auth\Assets\EmailConfirmationMessage.txt" />
   </ItemGroup>
-  <ItemGroup>
-    <Resource Include="Auth\Assets\EmailConfirmationMessage.txt" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
