Refactor structure of Authentification Window

--- a/PasswordManagerMainWindow/PasswordManagerApp.csproj
+++ b/PasswordManagerMainWindow/PasswordManagerApp.csproj
@@ -65,19 +65,19 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Page Include="AuthenticationWindow\Auth\Auth.xaml">
+    <Page Include="AuthenticationWindow\AuthenticationWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="AuthenticationWindow\Auth\EmailConfirmation.xaml">
+    <Page Include="AuthenticationWindow\Pages\EmailConfirmation.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="AuthenticationWindow\Auth\Login.xaml">
+    <Page Include="AuthenticationWindow\Pages\Login.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="AuthenticationWindow\Auth\PasswordReset.xaml">
+    <Page Include="AuthenticationWindow\Pages\PasswordReset.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -85,19 +85,19 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="AuthenticationWindow\Auth\Auth.xaml.cs">
-      <DependentUpon>Auth.xaml</DependentUpon>
+    <Compile Include="AuthenticationWindow\AuthenticationWindow.xaml.cs">
+      <DependentUpon>AuthenticationWindow.xaml</DependentUpon>
     </Compile>
-    <Compile Include="AuthenticationWindow\Auth\EmailConfirmation.xaml.cs">
+    <Compile Include="AuthenticationWindow\Pages\EmailConfirmation.xaml.cs">
       <DependentUpon>EmailConfirmation.xaml</DependentUpon>
     </Compile>
-    <Compile Include="AuthenticationWindow\Auth\Login.xaml.cs">
+    <Compile Include="AuthenticationWindow\Pages\Login.xaml.cs">
       <DependentUpon>Login.xaml</DependentUpon>
     </Compile>
-    <Compile Include="AuthenticationWindow\Auth\PasswordReset.xaml.cs">
+    <Compile Include="AuthenticationWindow\Pages\PasswordReset.xaml.cs">
       <DependentUpon>PasswordReset.xaml</DependentUpon>
     </Compile>
-    <Page Include="AuthenticationWindow\Auth\Signup.xaml">
+    <Page Include="AuthenticationWindow\Pages\Signup.xaml">
       <SubType>Designer</SubType>
       <Generator>XamlIntelliSenseFileGenerator</Generator>
     </Page>
@@ -121,11 +121,11 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
-    <Page Include="Styles\LoginPageStyles.xaml">
+    <Page Include="AuthenticationWindow\Styles\LoginPageStyles.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Styles\MainPageStyles.xaml">
+    <Page Include="AuthenticationWindow\Styles\MainPageStyles.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -133,19 +133,19 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
-    <Page Include="Styles\ResetPasswordStyles.xaml">
+    <Page Include="AuthenticationWindow\Styles\ResetPasswordStyles.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Styles\SignUpPageStyles.xaml">
+    <Page Include="AuthenticationWindow\Styles\SignUpPageStyles.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Themes\AuthenticationWindowThemes\DarkTheme.xaml">
+    <Page Include="AuthenticationWindow\Themes\DarkTheme.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Themes\AuthenticationWindowThemes\LightTheme.xaml">
+    <Page Include="AuthenticationWindow\Themes\LightTheme.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -159,7 +159,7 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AuthenticationWindow\Auth\Signup.xaml.cs">
+    <Compile Include="AuthenticationWindow\Pages\Signup.xaml.cs">
       <DependentUpon>Signup.xaml</DependentUpon>
     </Compile>
     <Compile Include="AuthenticationWindow\Components\BindablePasswordBox.xaml.cs">
@@ -223,15 +223,15 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="AuthenticationWindow\Auth\Assets\closed_eye.png" />
-    <Resource Include="AuthenticationWindow\Auth\Assets\eye.png" />
+    <Resource Include="AuthenticationWindow\Assets\closed_eye.png" />
+    <Resource Include="AuthenticationWindow\Assets\eye.png" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="AuthenticationWindow\Auth\Assets\closed_eye_white.png" />
-    <Resource Include="AuthenticationWindow\Auth\Assets\eye_white.png" />
+    <Resource Include="AuthenticationWindow\Assets\closed_eye_white.png" />
+    <Resource Include="AuthenticationWindow\Assets\eye_white.png" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="AuthenticationWindow\Auth\Assets\EmailConfirmationMessage.txt" />
+    <Resource Include="AuthenticationWindow\Assets\EmailConfirmationMessage.txt" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
