Refactor structure of Main Window

--- a/PasswordManagerMainWindow/PasswordManagerApp.csproj
+++ b/PasswordManagerMainWindow/PasswordManagerApp.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{95E6EDE7-0CEC-411D-A83F-4A6AC6A8EC44}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <RootNamespace>PasswordManager</RootNamespace>
-    <AssemblyName>PasswordManager</AssemblyName>
+    <AssemblyName>PasswordManagerApp</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -129,7 +129,7 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Styles\MainStyles.xaml">
+    <Page Include="MainWindow\Styles\MainStyles.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
@@ -149,11 +149,11 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Themes\MainWindowThemes\DarkTheme.xaml">
+    <Page Include="MainWindow\Themes\DarkTheme.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
-    <Page Include="Themes\MainWindowThemes\LightTheme.xaml">
+    <Page Include="MainWindow\Themes\LightTheme.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
