Binding fixes at lofin and signup page

--- a/PasswordManagerMainWindow/PasswordManagerApp.csproj
+++ b/PasswordManagerMainWindow/PasswordManagerApp.csproj
@@ -230,5 +230,17 @@
     <Resource Include="AuthenticationWindow\Assets\EmailConfirmationMessage.txt" />
   </ItemGroup>
   <ItemGroup />
+  <ItemGroup>
+    <Resource Include="MainWindow\Assets\eye_white.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="MainWindow\Assets\eye.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="MainWindow\Assets\closed_eye_white.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="MainWindow\Assets\closed_eye.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
