--- a/PasswordManagerMainWindow/App.config
+++ b/PasswordManagerMainWindow/App.config
@@ -29,6 +29,9 @@
       <setting name="Password" serializeAs="String">
         <value />
       </setting>
+      <setting name="Salt" serializeAs="String">
+        <value />
+      </setting>
     </PasswordManager.Properties.Settings>
   </userSettings>
 </configuration>
