--- a/Services/App.config
+++ b/Services/App.config
@@ -1,7 +1,25 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+  <configSections>
+    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+      <section name="Services.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+    </sectionGroup>
+  </configSections>
   <appSettings>
     <add key="ConfirmationMailLogin" value="pswdmngr.supp0rt@gmail.com" />
     <add key="ConfirmationMailPassword" value="f;j7Ne_2uy4ZVR!" />
   </appSettings>
+  <userSettings>
+    <Services.Properties.Settings>
+      <setting name="Email" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="Password" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="Salt" serializeAs="String">
+        <value />
+      </setting>
+    </Services.Properties.Settings>
+  </userSettings>
 </configuration>
