--- a/Services/ServicesLibrary.csproj
+++ b/Services/ServicesLibrary.csproj
@@ -43,6 +43,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="EMailService.cs" />
+    <Compile Include="InternetService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
       <DependentUpon>Settings.settings</DependentUpon>
