--- a/UsersLibrary/UsersLibrary.csproj
+++ b/UsersLibrary/UsersLibrary.csproj
@@ -61,6 +61,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Services\CryptedService.cs" />
     <Compile Include="Services\Service.cs" />
     <Compile Include="Settings\SignUpSettings.cs" />
     <Compile Include="Users\User.cs" />
