Add singleton to database connection

--- a/Services/ServicesLibrary.csproj
+++ b/Services/ServicesLibrary.csproj
@@ -57,6 +57,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DBConnectionSingleton.cs" />
     <Compile Include="EMailService.cs" />
     <Compile Include="InternetService.cs" />
     <Compile Include="LogoService.cs" />
