--- a/PasswordManagerMainWindow/PasswordManagerApp.csproj
+++ b/PasswordManagerMainWindow/PasswordManagerApp.csproj
@@ -210,6 +210,10 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Data\Data.csproj">
+      <Project>{8931477F-FDC0-4B2C-BB9E-BF2F0E8B0864}</Project>
+      <Name>Data</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Services\ServicesLibrary.csproj">
       <Project>{197BFFCB-A95B-4DA8-A4AF-9905997D6039}</Project>
       <Name>ServicesLibrary</Name>
